<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Keep Trash
  ~
  ~ Xposed module to move 'Delete' button from overflow menu to action bar
  ~ in Google Keep
  ~
  ~ Copyright (c) 2014 Shubhang Rathore
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- App info -->

    <string name="app_name">Keep Trash</string>
    <string name="app_copyright">
        Copyright © 2014 Shubhang Rathore
        \nGoogle+: http://google.com/+ShubhangRathore
        \nGithub: https://github.com/xenon92
        \nWebsite: http://shubhangrathore.com</string>

    <string name="app_version_text">Version</string>


    <!-- Menu -->

    <string name="action_exit">Exit</string>


    <!--

    Google Keep strings

    These are the official strings used in Google Keep app
    for selection_context_menu and editor_menu

    -->

    <string name="menu_archive">Archive</string>
    <string name="menu_unarchive">Unarchive</string>
    <string name="menu_add_reminder">Add reminder</string>
    <string name="color_picker_content_description">Note color</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_picture">Add picture</string>
    <string name="menu_clone">Make a copy</string>
    <string name="menu_show_extracted_text">Grab image text</string>
    <string name="menu_reset_list">Uncheck all items</string>
    <string name="menu_show_checkboxes">Show checkboxes</string>
    <string name="menu_hide_checkboxes">Hide checkboxes</string>
    <string name="menu_list_settings">List settings</string>


    <!-- Keep Trash GUI strings -->

    <string name="category_google_keep">Google Keep</string>
    <string name="installed_version">Installed version</string>
    <string name="keep_not_installed">Google Keep not installed</string>
    <string name="tap_to_open_keep_in_play_store">\nOpen Google Keep in Play Store</string>

    <string name="show_delete">Delete</string>
    <string name="show_delete_summary">Move Delete icon to action bar</string>

    <string name="show_share">Share</string>
    <string name="show_share_summary">Move Share icon to action bar</string>

    <string name="show_archive">Archive</string>
    <string name="show_archive_summary">Move Archive icon to action bar</string>

    <string name="show_show_checkboxes">Show/Hide checkboxes</string>
    <string name="show_show_checkboxes_summary">Move Show/Hide checkboxes icon to action bar</string>

    <string name="restart_google_keep_for_changes">Restart Google Keep for changes to take effect</string>
    <string name="opening_in_play_store">Opening Google Keep in Play Store</string>
    <string name="note_selected_category">Note selected</string>
    <string name="note_editor_category">Note editor</string>


    <!-- App details -->

    <string name="category_app_details">Keep Trash</string>

    <string name="source">Source</string>
    <string name="source_summary">Go through the source code of the app</string>

    <string name="developer">Developer</string>
    <string name="developer_summary">
        Shubhang Rathore
        \nVisit developer\'s website</string>

    <string name="changelog">Changelog</string>
    <string name="changelog_summary">See the changelog for the app</string>

    <string name="read_more">Read more</string>
    <string name="read_more_summary">Know more about Keep Trash Xposed module</string>

</resources>
