<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Keep Trash
  ~
  ~ Xposed module to customize Google Keep app
  ~
  ~ Copyright (c) 2014 - 2016 Shubhang Rathore
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- App info -->

    <PreferenceScreen
        android:title="@string/app_name"
        android:summary="@string/app_copyright"
        android:selectable="false" />

    <PreferenceScreen
        android:key="app_version_name_preference"
        android:title="@string/app_version_text"
        android:selectable="false" />


    <!-- Google Keep info -->

    <PreferenceCategory
        android:title="@string/category_google_keep" />

    <PreferenceScreen
        android:key="installed_keep_version_preference"
        android:title="@string/installed_version" />


    <!-- Note selected action bar customizations -->

    <PreferenceCategory
        android:title="@string/note_selected_category"/>

    <SwitchPreference
        android:key="show_delete_switch_preference"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/show_delete"
        android:summary="@string/show_delete_summary"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="show_share_switch_preference"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/show_share"
        android:summary="@string/show_share_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="show_archive_switch_preference"
        android:icon="@drawable/ic_archive_black_24dp"
        android:title="@string/show_archive"
        android:summary="@string/show_archive_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="show_color_changer_switch_preference"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/show_color_picker"
        android:summary="@string/show_color_picker_summary"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="show_add_label_switch_preference"
        android:icon="@drawable/ic_label_black_24dp"
        android:title="@string/show_label"
        android:summary="@string/show_label_summary"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="show_add_reminder_switch_preference"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/show_reminder"
        android:summary="@string/show_label_summary"
        android:defaultValue="true" />


    <!-- App details -->

    <PreferenceCategory
        android:title="@string/category_app_details" />

    <PreferenceScreen
        android:key="developer_preference"
        android:title="@string/developer"
        android:summary="@string/developer_summary" />

    <PreferenceScreen
        android:key="app_source_preference"
        android:title="@string/source"
        android:summary="@string/source_summary" />

    <PreferenceScreen
        android:key="donate_preference"
        android:title="@string/donate"
        android:summary="@string/donate_summary" />

    <PreferenceScreen
        android:key="changelog_preference"
        android:title="@string/changelog"
        android:summary="@string/changelog_summary" />

    <PreferenceScreen
        android:key="read_more_preference"
        android:title="@string/read_more"
        android:summary="@string/read_more_summary" />

</PreferenceScreen>